--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <title>Park Locator</title>
 </head>
 <body>
+
+    <div class="wrap">
+        <div class="search">
+           <input type="text" class="searchTerm" placeholder="What are you looking for?">
+           <button type="submit" class="searchButton">
+             <i class="fa fa-search"></i>
+          </button>
+        </div>
+     </div>
+
     
     <script src=""></script>
 </body>
