--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" 
     crossorigin="anonymous">
 
-    <link rel="stylesheet" 
+    <link type="text/css" rel="stylesheet" 
     href="style.css">
     
+
+
     <title>Park Locator</title>
 </head>
 <body>
@@ -21,8 +23,8 @@
     <div class="wrap">
         <div class="search">
             <ul class="menu align-center">
-                <li><input type="search" placeholder="Search"></li>
-                <li><button type="button" class="button">Search</button></li>
+                <li><input id="search-input" type="search placeholder="Search"></li>
+                <li><button id="search-button" type="button" class="button">Search</button></li>
             </ul>
             <!--<ul class="dropdown menu align-center" data-dropdown-menu>
                 <li>
@@ -42,7 +44,7 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
     crossorigin="anonymous"></script>
 
-    <script src="./assets/js/app.js"></script>
+    
 
     <script src="./assets/js/script.js"></script>
 </body>
