got the trails api working

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 
                 <ul class="menu align-center">
 
-                    <li><input id="search-input" type="search" placeholder="Search"></li>
-
+                    <li><input id="search-input" type="search" placeholder="City, State, Country">
                     <li><button id="search-button" type="button" class="button">Search</button></li>
 
                 </ul>
