--- a/location.html
+++ b/location.html
@@ -38,22 +38,21 @@
         </div>
 
         <!--seach bar-->
-        <div class="search">
+       <!-- <div class="search">
 
             <ul class="menu align-center">
-                <!--input bar-->
-                <li><input id="search-input" type="search" placeholder="City, State, Country">
-                    <!--search button-->
+                input bar
+                <li><input id="search-input" type="search" placeholder="City, State, Country"> 
+                search button
                 <li><button id="search-button" type="button" class="button"><i
-                            class="fas fa-search-location">Search</i></button></li>
-
+                    class="fas fa-search-location"> Find Trails</i></button></li>
             </ul>
 
-        </div>
+        </div> -->
 
         <!-- sidebar and filter btns -->
         <div class='sidebar pad2'>
-            <p>Location information</p>
+            <p id="loc-info">Location information</p>
             <hr>
 
             <div id="listings">
@@ -69,6 +68,11 @@
 
 
     <!--link to connect mapbox api-->
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css"
+/>
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet' />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
