added popups and recentering

--- a/location.html
+++ b/location.html
@@ -51,7 +51,7 @@
         </div> -->
 
         <!-- sidebar and filter btns -->
-        <div class='sidebar pad2'>
+        <div id="sidebar" class='sidebar pad2'>
             <p id="loc-info">Location information</p>
             <hr>
 
